<resources>
    <string name="app_name">DotSlicer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="settings">settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="intermediate">intermediate</string>>
    <string name="hard">hard</string>>
    <string name="easy">easy</string>
    <string name="difficulty">Difficulty:</string>
    <string name="exit">exit</string>
    <string name="number">number</string>
    <string name="number_to_get">number_to_get</string>
    <string name="victory">You won!</string>
    <string name="press_to_continue">Press to continue...</string>
</resources>